--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,180 @@
 .App {
   text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: #1c3664;
+}
+html {
+  background-color: #f69799;
+  width: 100vw;
 }
 
 .App-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+nav {
+  max-width: 700px;
+  margin: auto;
+}
+
+nav a {
+  color: #1c3664;
+  margin: 40px 0;
+  text-decoration: none;
+  font-weight: 500;
+}
+
+h1 {
+  font-weight: 900;
+  margin-top: 20vh;
+  font-size: 10vmin;
+}
+
+.bird-ship {
+  width: 75vw;
+}
+
+.kambam {
+  width: 75vw;
+  margin-top: 10px;
+}
+
+.clouds {
+  display: inline-block;
+  animation: Move-across infinite 30s linear;
+  left: -50%;
+  width: 100%;
+}
+.clouds2 {
+  display: inline-block;
+  animation: Move-across 30s infinite 8s linear;
+  left: 0%;
+  width: 100%;
+}
+.clouds-container {
+  position: absolute;
+  display: inline-block;
+  left: -50%;
+  width: 200%;
+  overflow: hidden;
+  height: 50vh;
+  z-index: -4;
+  animation: Move-across3 infinite 20s linear;
+}
+.clouds-container2 {
+  position: absolute;
+  display: inline-block;
+  left: 50%;
+  width: 200%;
+  overflow: hidden;
+  height: 50vh;
+  z-index: -4;
+  animation: Move-across4 infinite 20s linear;
+}
+.movement {
+  position: relative;
+  width: 100vw;
+  overflow: hidden;
+  height: 50vh;
+}
+.intro {
+  z-index: 0;
+  padding-top: 5vh;
+  margin-top: -50vh;
+}
+
+@media (min-width: 700px) {
+  .bird-ship {
+    width: 25vw;
+  }
+  .clouds {
+    display: inline-block;
+    animation: Move-across infinite 30s linear;
+    left: -50%;
+    width: 50%;
+  }
+
+  .clouds-container {
+    position: absolute;
+    display: inline-block;
+    left: -100%;
+    width: 100vw;
+    overflow: hidden;
+    height: 50vh;
+    z-index: -4;
+    animation: Move-across infinite 20s linear;
+  }
+  .clouds-container2 {
+    position: absolute;
+    display: inline-block;
+    left: 0%;
+    width: 100vw;
+    overflow: hidden;
+    height: 50vh;
+    z-index: -4;
+    animation: Move-across2 infinite 20s linear;
+  }
+
+  .movement {
+    position: relative;
+    width: 100vw;
+    overflow: hidden;
+    height: 50vh;
+  }
+  h1 {
+    font-weight: 900;
+    margin-top: 5vh;
+    margin-bottom: 0;
+    font-size: 8vmin;
+  }
+  h2 {
+    margin-top: 0;
+  }
+  .kambam {
+    width: 25vw;
+    margin-top: 10px;
+  }
+  @keyframes Move-across {
+    from {
+      left: -50%;
+    }
+    to {
+      left: 0%;
+    }
+  }
+  @keyframes Move-across2 {
+    from {
+      left: 0%;
+    }
+    to {
+      left: 50%;
+    }
+  }
+}
+
+@keyframes Move-across3 {
   from {
-    transform: rotate(0deg);
+    left: -200%;
   }
   to {
-    transform: rotate(360deg);
+    left: 0%;
   }
+}
+@keyframes Move-across4 {
+  from {
+    left: 0%;
+  }
+  to {
+    left: 200%;
+  }
+}
+
+.card {
+  background-color: white;
+  margin: auto;
+  padding: 40px;
+  box-sizing: border-box;
+  border: 3px solid #1c3664;
+  box-shadow: 10px 10px #1c3664;
 }
