--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   text-align: center;
 
   min-height: 100vh;
-  color: #1c3664;
+  color: black;
 }
 html {
   background-color: white;
@@ -19,7 +19,7 @@ nav {
 }
 
 nav a {
-  color: #1c3664;
+  color: black;
   margin: 40px 0;
   text-decoration: none;
   font-weight: 500;
@@ -28,7 +28,10 @@ nav a {
 h1 {
   font-weight: 900;
   margin-top: 20vh;
-  font-size: 10vmin;
+  margin-left: 40px;
+  margin-right: 40px;
+  font-size: 8vmin;
+  text-shadow: 1px 1px 10px white;
 }
 
 .bird-ship {
@@ -43,45 +46,44 @@ h1 {
 .clouds {
   display: inline-block;
   animation: Move-across infinite 30s linear;
-  left: -50%;
+  right: -50%;
   width: 100%;
 }
 .clouds2 {
   display: inline-block;
   animation: Move-across 30s infinite 8s linear;
-  left: 0%;
+  right: 0%;
   width: 100%;
 }
 .clouds-container {
   position: absolute;
   display: inline-block;
-  left: -50%;
+  right: -50%;
   width: 200%;
   overflow: hidden;
-  height: 50vh;
+  height: 100vh;
   z-index: -4;
   animation: Move-across3 infinite 20s linear;
 }
 .clouds-container2 {
   position: absolute;
   display: inline-block;
-  left: 50%;
+  right: 50%;
   width: 200%;
   overflow: hidden;
-  height: 50vh;
+  height: 100vh;
   z-index: -4;
   animation: Move-across4 infinite 20s linear;
 }
 .movement {
-  position: relative;
+  position: absolute;
   width: 100vw;
   overflow: hidden;
-  height: 50vh;
+  height: 100vh;
 }
 .intro {
   z-index: 0;
   padding-top: 5vh;
-  margin-top: -50vh;
 }
 
 @media (min-width: 700px) {
@@ -91,40 +93,40 @@ h1 {
   .clouds {
     display: inline-block;
     animation: Move-across infinite 30s linear;
-    left: -50%;
+    right: -50%;
     width: 50%;
   }
 
   .clouds-container {
     position: absolute;
     display: inline-block;
-    left: -100%;
+    right: -100%;
     width: 100vw;
     overflow: hidden;
-    height: 50vh;
+    height: 100vh;
     z-index: -4;
     animation: Move-across infinite 20s linear;
   }
   .clouds-container2 {
     position: absolute;
     display: inline-block;
-    left: 0%;
+    right: 0%;
     width: 100vw;
     overflow: hidden;
-    height: 50vh;
+    height: 100vh;
     z-index: -4;
     animation: Move-across2 infinite 20s linear;
   }
 
   .movement {
-    position: relative;
+    position: absolute;
     width: 100vw;
     overflow: hidden;
-    height: 50vh;
+    height: 100vh;
   }
   h1 {
     font-weight: 900;
-    margin-top: 5vh;
+    margin-top: 10vh;
     margin-bottom: 0;
     font-size: 8vmin;
   }
@@ -134,39 +136,40 @@ h1 {
   .kambam {
     width: 25vw;
     margin-top: 10px;
+    background-color: white;
   }
   @keyframes Move-across {
     from {
-      left: -50%;
+      right: -50%;
     }
     to {
-      left: 0%;
+      right: 0%;
     }
   }
   @keyframes Move-across2 {
     from {
-      left: 0%;
+      right: 0%;
     }
     to {
-      left: 50%;
+      right: 50%;
     }
   }
 }
 
 @keyframes Move-across3 {
   from {
-    left: -200%;
+    right: -200%;
   }
   to {
-    left: 0%;
+    right: 0%;
   }
 }
 @keyframes Move-across4 {
   from {
-    left: 0%;
+    right: 0%;
   }
   to {
-    left: 200%;
+    right: 200%;
   }
 }
 
@@ -175,6 +178,6 @@ h1 {
   margin: auto;
   padding: 40px;
   box-sizing: border-box;
-  border: 3px solid #1c3664;
-  box-shadow: 10px 10px #1c3664;
+  border: 3px solid black;
+  box-shadow: 10px 10px black;
 }
